# c-opengl

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  README.md  bbuild.bat  bclean.bat  bexe.bat  brun.bat  ccompile.bat
resource/: simple.vert
source/: .main.c.swp  fileops.c  fileops.h  main.c  shader.c  shader.h  simple.frag  simple.vert
